# btm-bess-market-optimizer

./: .dockerignore  .gitignore  Dockerfile  EXECUTIVE_SUMMARY.md  README.md  compose.yml  pyproject.toml  render.yml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: test-publish-container.yaml
apps/dashboard/: README.md  pyproject.toml
apps/dashboard/src/bess_dashboard/: __init__.py  __main__.py  app.py  data.py  seo.py
apps/dashboard/src/bess_dashboard/components/: charts.py  dispatch_charts.py  kpis.py
apps/dashboard/src/bess_dashboard/tabs/: break_even.py  data.py  dispatch.py  methodology.py
bess_optimizer/: README.md  pyproject.toml
bess_optimizer/src/bess_optimizer/: cli.py  settings.py
bess_optimizer/src/bess_optimizer/data/: __init__.py  config.py  loaders.py  parsing.py  pipeline.py
bess_optimizer/src/bess_optimizer/model/: __init__.py  baselines.py  battery.py  config.py  constraints.py  dispatch.py  energy_flows.py  io.py  metrics.py  rows.py  scenarios.py  scheduler.py  schemas.py
bess_optimizer/src/bess_optimizer/sensitivity/: __init__.py  b3_break_even.py  finance.py
bess_optimizer/src/bess_optimizer/workflows/: __init__.py  b3.py  part_a.py  pipeline.py
data/output/: b3_mfrr_break_even_sensitivity_se3_20260624.csv  part_a_constraint_audit_se3_20260624.csv  part_a_dispatch_hourly_se3_20260624.csv  part_a_scenario_summary_se3_20260624.csv
data/processed/: representative_day_15min_se3_20260624.csv  representative_day_hourly_se3_20260624.csv
data/raw/: README_RAW_DATA.md  esett_consumption_profile_20260624.csv  esett_imbalance_prices_20260624.csv  esett_load_profile_20260624.csv  esett_production_profile_20260624.csv  mimer_afrr_capacity_market_20260624_optional.csv  mimer_fcr_capacity_market_20260624.csv  mimer_mfrr_capacity_market_d1_20260624.csv  mimer_mfrr_energy_activation_market_20260624.csv  nordpool_day_ahead_prices_pasted_20260624.csv  raw_data_manifest.csv  svk_day_ahead_area_prices_20260624.csv  synthetic_representative_swedish_ci_load_profiles_15min.csv  synthetic_representative_swedish_ci_load_profiles_hourly.csv
docs/: ASSUMPTIONS_AND_FORMULAS.md  B3_BREAK_EVEN_ANALYSIS.md  DATA_METHOD.md  IMPLEMENTATION_NOTES.md  TECHNICAL_WRITEUP.md
docs/about/: ASSESSMENT.md
docs/research/: 2-day-plan.md  dashboard-design.md  data-source-discussions.md  deep-research-report-chatgpt-plan.md  zone_choice.md
scripts/: build_processed_dataset.py  run_b3_sensitivity.py  run_part_a_model.py
tests/: test_dashboard_seo.py  test_pipeline_parity.py
