[project]
name = "bess-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "rich>=14.2.0",
]

[project.scripts]
bess-build-data = "bess_optimizer.cli:build_data"
bess-run-model = "bess_optimizer.cli:run_model"
bess-run-sensitivity = "bess_optimizer.cli:run_sensitivity"
bess-run-pipeline = "bess_optimizer.cli:run_full_pipeline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bess_optimizer"]
